cilium-networkpolicies/apps-networkpolicies/netpol-apps-abs.yaml
apiVersion: "cilium.io/v2"
kind: CiliumNetworkPolicy
metadata:
  name: netpol-apps-abs
  namespace: apps
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: audiobookshelf
  egress:
    - toEntities:
        - world
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
